--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,11 +18,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
-        android:textSize="10sp"
+        android:textSize="30sp"
+        android:layout_marginTop="25dp"
         android:layout_below="@+id/teleopPeriodTextView"
-        android:layout_alignRight="@+id/gearsDroppedTextView"
-        android:layout_alignEnd="@+id/gearsDroppedTextView"
-        android:layout_marginTop="10dp" />
+        android:layout_alignLeft="@+id/successfulclimbcheckBox"
+        android:layout_alignStart="@+id/successfulclimbcheckBox" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,11 +32,12 @@
         android:id="@+id/teleopPeriodTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="40sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
         android:text="-"
         android:id="@+id/decreaseGearsPickedUpButton"
         android:layout_below="@+id/gearsPickedUpTextView"
@@ -42,14 +46,14 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPickedUpButton"
+        android:paddingTop="5dp"
         android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
         android:layout_toRightOf="@+id/gearsPickedUpTextView"
-        android:layout_toEndOf="@+id/gearsPickedUpTextView"
-        android:paddingTop="5dp"/>
+        android:layout_toEndOf="@+id/gearsPickedUpTextView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -57,8 +61,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
-        android:textSize="10sp"
-        android:layout_alignBottom="@+id/increaseGearsPickedUpButton"
+        android:textSize="20sp"
+        android:layout_above="@+id/gearsDroppedTextView"
         android:layout_alignLeft="@+id/amountGearsDroppedTextView"
         android:layout_alignStart="@+id/amountGearsDroppedTextView" />
 
@@ -68,26 +72,30 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Dropped:"
         android:id="@+id/gearsDroppedTextView"
-        android:layout_below="@+id/increaseGearsPickedUpButton"
-        android:layout_centerHorizontal="true"
         android:paddingTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="30sp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/decreaseGearsPickedUpButton"
+        android:layout_alignLeft="@+id/gearsPlacedTextView"
+        android:layout_alignStart="@+id/gearsPlacedTextView" />
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedButton"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/gearsDroppedTextView"
         android:layout_alignRight="@+id/decreaseGearsPickedUpButton"
         android:layout_alignEnd="@+id/decreaseGearsPickedUpButton"
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/gearsDroppedTextView"
         android:layout_alignLeft="@+id/increaseGearsPickedUpButton"
         android:layout_alignStart="@+id/increaseGearsPickedUpButton"
@@ -101,7 +109,7 @@
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="20sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -111,24 +119,26 @@
         android:id="@+id/gearsPlacedTextView"
         android:layout_below="@+id/decreaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"
-        android:textSize="10sp"/>
+        android:paddingTop="15dp"
+        android:textSize="30sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:text="-"
         android:id="@+id/decreaseGearsPlacedButton"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/gearsPlacedTextView"
         android:layout_alignRight="@+id/decreaseGearsDroppedButton"
         android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/gearsPlacedTextView"
         android:layout_alignLeft="@+id/increaseGearsDroppedButton"
         android:layout_alignStart="@+id/increaseGearsDroppedButton"
@@ -142,17 +152,17 @@
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="20sp"/>
 
     <SeekBar
-        android:layout_width="200dp"
-        android:layout_height="30dp"
+        android:layout_width="400dp"
+        android:layout_height="40dp"
         android:id="@+id/ballrateSeekBar"
         android:max="10"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/amountGearsPlacedTextView"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -163,8 +173,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/ballrateSeekBar"
-        android:textSize="11sp"
-        android:layout_marginTop="0dp"/>
+        android:textSize="15sp"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -172,10 +182,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
         android:id="@+id/zerorateTextView"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/ballrateSeekBar"
         android:layout_toLeftOf="@+id/ballrateSeekBar"
         android:layout_toStartOf="@+id/ballrateSeekBar"
-        android:textSize="11sp"/>
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -186,16 +197,16 @@
         android:layout_alignTop="@+id/ballrateTextView"
         android:layout_toRightOf="@+id/teleopPeriodTextView"
         android:layout_toEndOf="@+id/teleopPeriodTextView"
-        android:textSize="11sp"/>
+        android:textSize="15sp"/>
 
     <SeekBar
-        android:layout_width="200dp"
-        android:layout_height="30dp"
+        android:layout_width="400dp"
+        android:layout_height="40dp"
         android:id="@+id/lowballrateSeekBar"
         android:layout_below="@+id/ballrateTextView"
         android:layout_centerHorizontal="true"
         android:max="10"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -205,8 +216,8 @@
         android:id="@+id/lowballTextView"
         android:layout_below="@+id/lowballrateSeekBar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:textSize="11sp"/>
+        android:layout_marginTop="5dp"
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -214,10 +225,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
         android:id="@+id/lowzerorateTextView"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/lowballrateSeekBar"
         android:layout_toLeftOf="@+id/lowballrateSeekBar"
         android:layout_toStartOf="@+id/lowballrateSeekBar"
-        android:textSize="11sp"/>
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -225,7 +237,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
         android:id="@+id/lowtenrateTextView"
-        android:textSize="11sp"
+        android:textSize="15sp"
+        android:layout_marginTop="5dp"
         android:layout_alignTop="@+id/lowballTextView"
         android:layout_alignLeft="@+id/tenrateTextView"
         android:layout_alignStart="@+id/tenrateTextView" />
@@ -235,49 +248,43 @@
         android:layout_height="wrap_content"
         android:text="Successful Climb?"
         android:id="@+id/successfulclimbcheckBox"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/lowballTextView"
         android:layout_centerHorizontal="true"
-        android:textSize="13sp"/>
+        android:textSize="21sp"/>
 
     <Chronometer
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:id="@+id/climbChronometer"
+        android:textSize="20sp"
         android:text="00"
+        android:layout_marginTop="15dp"
         android:layout_alignBottom="@+id/startclimbButton"
         android:layout_alignLeft="@+id/lowzerorateTextView"
         android:layout_alignStart="@+id/lowzerorateTextView" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="90dp"
-        android:layout_height="35dp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:text="Start/Stop"
         android:id="@+id/startclimbButton"
-        android:textSize="10sp"
+        android:layout_marginTop="15dp"
+        android:textSize="15sp"
         android:layout_below="@+id/successfulclimbcheckBox"
         android:layout_centerHorizontal="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="55dp"
-        android:layout_height="35dp"
-        android:textSize="10sp"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:textSize="15sp"
         android:text="Reset"
         android:id="@+id/resetclimbButton"
+        android:layout_marginTop="15dp"
         android:layout_alignBottom="@+id/climbChronometer"
         android:layout_toRightOf="@+id/increaseGearsPlacedButton"
         android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sensor Activated?"
-        android:id="@+id/sensoractiveCheckBox"
-        android:layout_below="@+id/climbChronometer"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:textSize="13sp"/>
-
 </RelativeLayout>
+</ScrollView>
