--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -190,12 +190,56 @@
 
     <SeekBar
         android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:id="@+id/highballsmissedSeekBar"
+        android:max="100"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/ballrateTextView"
+        android:layout_alignRight="@id/ballrateSeekBar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="High Missed"
+        android:id="@+id/highmissedTextView"
+        android:layout_below="@+id/highballsmissedSeekBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:textSize="11sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/zeromissedTextView"
+        android:layout_below="@+id/highballsmissedSeekBar"
+        android:layout_toLeftOf="@+id/highballsmissedSeekBar"
+        android:layout_toStartOf="@+id/highballsmissedSeekBar"
+        android:layout_marginTop="0dp"
+        android:textSize="11sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="100"
+        android:id="@+id/onehundredmissedTextView"
+        android:layout_below="@+id/highballsmissedSeekBar"
+        android:layout_toRightOf="@+id/highballsmissedSeekBar"
+        android:layout_toEndOf="@+id/highballsmissedSeekBar"
+        android:layout_marginTop="0dp"
+        android:textSize="11sp"/>
+
+    <SeekBar
+        android:layout_width="200dp"
         android:layout_height="30dp"
         android:id="@+id/lowballrateSeekBar"
-        android:layout_below="@+id/ballrateTextView"
-        android:layout_centerHorizontal="true"
         android:max="10"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/highmissedTextView"
+        android:layout_alignRight="@+id/highballsmissedSeekBar" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -230,15 +274,24 @@
         android:layout_alignLeft="@+id/tenrateTextView"
         android:layout_alignStart="@+id/tenrateTextView" />
 
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:id="@+id/lowballmissedSeekBar"
+        android:max="100"
+        android:layout_below="@+id/lowballTextView"
+        android:layout_alignRight="@+id/lowballrateSeekBar"
+        android:/>
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Successful Climb?"
         android:id="@+id/successfulclimbcheckBox"
-        android:layout_marginTop="10dp"
+        android:textSize="13sp"
         android:layout_below="@+id/lowballTextView"
         android:layout_centerHorizontal="true"
-        android:textSize="13sp"/>
+        android:layout_marginTop="48dp" />
 
     <Chronometer
         android:layout_width="25dp"
@@ -269,5 +322,5 @@
         android:layout_alignBottom="@+id/climbChronometer"
         android:layout_toRightOf="@+id/increaseGearsPlacedButton"
         android:layout_toEndOf="@+id/increaseGearsPlacedButton" />
-    
+
 </RelativeLayout>
