--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -6,8 +6,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/txtContent" />
+        android:id="@+id/txtContent"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
