--- a/app/src/main/res/layout-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-land/auto_period_fragment.xml
@@ -13,85 +13,84 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Autonomous Period"
+        android:textSize="30sp"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="25sp"/>
+        android:layout_centerHorizontal="true" />
 
-    <CheckBox
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Baseline Crossed?"
-        android:id="@+id/baselineCheckBox"
-        android:layout_marginTop="10dp"
+        android:id="@+id/locationOfRobot"
+        android:text="Location of Robot"
+        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/autoTextView"
-        android:layout_centerHorizontal="true"
-        android:checked="false"
-        android:textSize="15dp"/>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Attempted to place gear?"
-        android:id="@+id/gearAttemptCheckBox"
-        android:layout_below="@+id/baselineCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:checked="false"
-        android:textSize="15sp"/>
+        android:layout_marginTop="15dp"
+        android:textColor="#000000"
+        android:textIsSelectable="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gear successfully placed?"
+        android:textSize="20sp"
         android:id="@+id/gearSuccessCheckBox"
-        android:layout_below="@+id/gearAttemptCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:checked="false"
-        android:textSize="15sp"/>
+        android:layout_below="@+id/leftPegStart"
+        android:layout_alignRight="@+id/autoTextView"
+        android:layout_alignEnd="@+id/autoTextView" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="High goal?"
-        android:id="@+id/highCheckBox"
-        android:layout_marginTop="10dp"
-        android:checked="false"
-        android:layout_below="@+id/gearSuccessCheckBox"
+        android:id="@+id/leftPegStart"
+        android:text="Left Peg"
+        android:layout_marginTop="25dp"
+        android:textSize="18sp"
+        android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="15sp"/>
+        android:layout_alignParentStart="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Low goal?"
-        android:id="@+id/lowCheckBox"
-        android:layout_alignTop="@+id/highCheckBox"
+        android:id="@+id/middlePegStart"
+        android:text="Middle Peg"
+        android:textSize="18sp"
+        android:layout_alignTop="@+id/leftPegStart"
+        android:layout_above="@+id/gearSuccessCheckBox"
+        android:layout_centerHorizontal="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rightPegStart"
+        android:text="Right Peg"
+        android:textSize="18sp"
+        android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:checked="false"
-        android:textSize="15sp"/>
+        android:layout_alignParentEnd="true" />
 
     <SeekBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/autoBallsSeekBar"
-        android:layout_below="@+id/lowCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:max="20"
+        android:max="50"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="275dp" />
+        android:minWidth="275dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/gearSuccessCheckBox"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
@@ -101,8 +100,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="20"
-        android:textSize="15dp"
+        android:text="50"
+        android:textSize="15sp"
         android:id="@+id/tenTextView"
         android:layout_alignBottom="@+id/zeroTextView"
         android:layout_alignRight="@+id/autoBallsSeekBar"
@@ -112,9 +111,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balls Made: 0"
+        android:textSize="15sp"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true"
-        android:textSize="15sp"/>
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
