--- a/app/src/main/res/layout-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-land/auto_period_fragment.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:clickable="false">
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +41,8 @@
         android:checked="false"
         android:layout_below="@+id/leftPegStart"
         android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView" />
+        android:layout_alignEnd="@+id/autoTextView"
+        android:buttonTint="#4169e1" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -51,7 +53,8 @@
         android:textSize="18sp"
         android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -61,7 +64,8 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/leftPegStart"
         android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -71,7 +75,8 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:buttonTint="#4169e1"/>
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -83,7 +88,8 @@
         android:minWidth="275dp"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:clickable="false" />
 
     <TextView
         android:layout_width="wrap_content"
