--- a/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Autonomous Period"
-        android:textSize="30sp"
+        android:textSize="50sp"
+        android:layout_marginTop="5dp"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/locationOfRobot"
         android:text="Location of Robot"
-        android:textSize="25sp"
+        android:textSize="35sp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/autoTextView"
         android:layout_marginTop="25dp"
@@ -33,44 +34,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gear successfully placed?"
-        android:textSize="20sp"
+        android:textSize="35sp"
         android:id="@+id/gearSuccessCheckBox"
         android:layout_marginTop="30dp"
         android:checked="false"
         android:layout_below="@+id/leftPegStart"
         android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView" />
+        android:layout_alignEnd="@+id/autoTextView"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/leftPegStart"
         android:text="Left Peg"
-        android:layout_marginTop="25dp"
-        android:textSize="18sp"
+        android:layout_marginTop="35dp"
+        android:textSize="25sp"
         android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/middlePegStart"
         android:text="Middle Peg"
-        android:textSize="18sp"
+        android:textSize="25sp"
         android:layout_alignTop="@+id/leftPegStart"
         android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rightPegStart"
         android:text="Right Peg"
-        android:textSize="18sp"
+        android:textSize="25sp"
         android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:buttonTint="#4169e1"/>
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -79,7 +84,7 @@
         android:max="50"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="275dp"
+        android:minWidth="600dp"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/gearSuccessCheckBox"
         android:layout_centerHorizontal="true" />
@@ -93,7 +98,7 @@
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
-        android:layout_alignStart="@+id/autoBallsSeekBar" />
+        android:layout_alignStart="@+id/autoBallsSeekBar"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -113,6 +118,7 @@
         android:textSize="15sp"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"/>
 
 </RelativeLayout>
