--- a/app/src/main/res/layout/auto_period_fragment.xml
+++ b/app/src/main/res/layout/auto_period_fragment.xml
@@ -39,7 +39,8 @@
         android:checked="false"
         android:layout_below="@+id/leftPegStart"
         android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView" />
+        android:layout_alignEnd="@+id/autoTextView"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
         android:textSize="18sp"
         android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -60,7 +62,8 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/leftPegStart"
         android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:buttonTint="#4169e1"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -70,7 +73,8 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:buttonTint="#4169e1"/>
 
     <SeekBar
         android:layout_width="wrap_content"
