--- a/app/src/main/res/layout-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-land/auto_period_fragment.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:clickable="false">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,8 +40,7 @@
         android:checked="false"
         android:layout_below="@+id/leftPegStart"
         android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView"
-        android:buttonTint="#4169e1" />
+        android:layout_alignEnd="@+id/autoTextView" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -53,8 +51,7 @@
         android:textSize="18sp"
         android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_alignParentStart="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -64,8 +61,7 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/leftPegStart"
         android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_centerHorizontal="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -75,8 +71,7 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_alignParentEnd="true" />
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -88,8 +83,7 @@
         android:minWidth="275dp"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true"
-        android:clickable="false" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
