--- a/app/src/main/res/layout/auto_period_fragment.xml
+++ b/app/src/main/res/layout/auto_period_fragment.xml
@@ -39,8 +39,7 @@
         android:checked="false"
         android:layout_below="@+id/leftPegStart"
         android:layout_alignRight="@+id/autoTextView"
-        android:layout_alignEnd="@+id/autoTextView"
-        android:buttonTint="#4169e1"/>
+        android:layout_alignEnd="@+id/autoTextView" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -51,8 +50,7 @@
         android:textSize="18sp"
         android:layout_below="@+id/locationOfRobot"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_alignParentStart="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -62,8 +60,7 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/leftPegStart"
         android:layout_above="@+id/gearSuccessCheckBox"
-        android:layout_centerHorizontal="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_centerHorizontal="true" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -73,8 +70,7 @@
         android:textSize="18sp"
         android:layout_alignTop="@+id/middlePegStart"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:buttonTint="#4169e1"/>
+        android:layout_alignParentEnd="true" />
 
     <SeekBar
         android:layout_width="wrap_content"
